Content added for SEO

--- a/index.html
+++ b/index.html
@@ -4,7 +4,48 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Amidhara Borewell - Professional Borewell Services</title>
+    <title>Borewell Drilling & Pump Installation in Vadodara | Amidhara Borewell</title>
+    <meta name="description" content="Amidhara Borewell provides borewell drilling, installation, pump repair, submersible motor fitting & geophysical surveying services across Vadodara, Gujarat."/>
+    <meta name="keywords" content="borewell vadodara, borewell drilling vadodara, borewell service near me, borewell contractor vadodara, pump repair vadodara"/>
+
+      <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "LocalBusiness",
+          "name": "Amidhara Borewell",
+          "image": "https://www.amidharaborewell.com/logo.png",
+          "@id": "",
+          "url": "https://www.amidharaborewell.com/",
+          "telephone": "+91 91066 04895",
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Sahajanand Krupa Society, F/120, Tarsali",
+            "addressLocality": "Vadodara",
+            "addressRegion": "Gujarat",
+            "postalCode": "390009",
+            "addressCountry": "IN"
+          },
+          "geo": {
+            "@type": "GeoCoordinates",
+            "latitude": 22.2604,
+            "longitude": 73.2107
+          },
+          "openingHours": "Mo-Su 00:00-23:59",
+          "areaServed": "Vadodara, Gujarat, India",
+          "priceRange": "₹₹",
+          "description": "Professional Borewell drilling, pump installation, submersible motor fitting, geophysical survey and 24/7 emergency services across Vadodara.",
+          "servesCuisine": "",
+          "serviceType": [
+            "Borewell Drilling",
+            "Borewell Installation",
+            "Pump Maintenance & Repair",
+            "Submersible Pump Services",
+            "Emergency Borewell Services",
+            "Water Testing"
+          ]
+        }
+      </script>
+
   </head>
   <body>
     <div id="root"></div>
