--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Borewell Drilling & Pump Installation in Vadodara | Amidhara Borewell</title>
     <meta name="description" content="Amidhara Borewell provides borewell drilling, installation, pump repair, submersible motor fitting & geophysical surveying services across Vadodara, Gujarat."/>
