--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
 
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
@@ -11,49 +10,49 @@
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Borewell Drilling & Pump Installation in Vadodara | Amidhara Borewell</title>
     <meta name="description" content="Amidhara Borewell provides borewell drilling, installation, pump repair, submersible motor fitting & geophysical surveying services across Vadodara, Gujarat."/>
     <meta name="keywords" content="borewell vadodara, borewell drilling vadodara, borewell service near me, borewell contractor vadodara, pump repair vadodara"/>
 
-      <script type="application/ld+json">
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Amidhara Borewell",
+      "url": "https://www.amidharaborewell.com/",
+      "logo": "https://www.amidharaborewell.com/android-chrome-512x512.png",
+      "image": "https://www.amidharaborewell.com/android-chrome-512x512.png",
+      "telephone": "+91 91066 04895",
+      "priceRange": "₹₹",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Sahajanand Krupa Society, F/120, Tarsali",
+        "addressLocality": "Vadodara",
+        "addressRegion": "Gujarat",
+        "postalCode": "390009",
+        "addressCountry": "IN"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 22.2604,
+        "longitude": 73.2107
+      },
+      "openingHours": "Mo-Su 00:00-23:59",
+      "areaServed": "Vadodara, Gujarat, India",
+      "description": "Professional borewell drilling, pump installation, submersible motor fitting, geophysical survey and emergency services across Vadodara.",
+      "serviceOffered": [
         {
-          "@context": "https://schema.org",
-          "@type": "LocalBusiness",
-          "name": "Amidhara Borewell",
-          "image": "https://www.amidharaborewell.com/logo.png",
-          "@id": "",
-          "url": "https://www.amidharaborewell.com/",
-          "telephone": "+91 91066 04895",
-          "address": {
-            "@type": "PostalAddress",
-            "streetAddress": "Sahajanand Krupa Society, F/120, Tarsali",
-            "addressLocality": "Vadodara",
-            "addressRegion": "Gujarat",
-            "postalCode": "390009",
-            "addressCountry": "IN"
-          },
-          "geo": {
-            "@type": "GeoCoordinates",
-            "latitude": 22.2604,
-            "longitude": 73.2107
-          },
-          "openingHours": "Mo-Su 00:00-23:59",
-          "areaServed": "Vadodara, Gujarat, India",
-          "priceRange": "₹₹",
-          "description": "Professional Borewell drilling, pump installation, submersible motor fitting, geophysical survey and 24/7 emergency services across Vadodara.",
-          "servesCuisine": "",
-          "serviceType": [
-            "Borewell Drilling",
-            "Borewell Installation",
-            "Pump Maintenance & Repair",
-            "Submersible Pump Services",
-            "Emergency Borewell Services",
-            "Water Testing"
-          ]
+          "@type": "Service",
+          "name": "Borewell Drilling"
+        },
+        {
+          "@type": "Service",
+          "name": "Pump Installation & Repair"
         }
-      </script>
+      ]
+    }
+    </script>
 
   </head>
   <body>
